wip: config
